@@ -1,5 +1,6 @@
 ikiwiki (3.20141016.3) UNRELEASED; urgency=medium
 
+  [ Simon McVittie ]
   * img: stop ImageMagick trying to be clever if filenames contain a colon,
     avoiding mis-processing
   * HTML-escape error messages, in one case avoiding potential cross-site
@@ -11,6 +12,15 @@ ikiwiki (3.20141016.3) UNRELEASED; urgency=medium
       CVE-2016-3714 and similar vulnerabilities
     - img: check that the magic number matches what we would expect from
       the extension before giving common formats to ImageMagick
+
+  [ Joey Hess ]
+  * img: Add back support for SVG images, bypassing ImageMagick and
+    simply passing the SVG through to the browser, which is supported by all
+    commonly used browsers these days.
+    SVG scaling by img directives has subtly changed; where before
+    size=wxh would preserve aspect ratio, this cannot be done when passing
+    them through and so specifying both a width and height can change
+    the SVG's aspect ratio.
 
  -- Simon McVittie <smcv@debian.org>  Thu, 05 May 2016 23:33:26 +0100
 
